--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "twitch_api"
-version = "0.1.0"
+version = "0.1.2"
+edition = "2018"
 authors = ["Matt Shanker <hatmatteroffact@gmail.com>"]
 description = "Twitch API library"
 repository = "https://github.com/hatmatter/twitch_api"
-readme = "README"
+readme = "README.md"
 keywords = ["twitch", "api"]
 categories = ["api-bindings"]
 license = "Apache-2.0"
@@ -12,7 +13,7 @@ license = "Apache-2.0"
 [dependencies]
 chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }
 hyper = "0.10.4"
-hyper-rustls = "0.5.0"
+hyper-rustls = "0.6.0"
 serde = "0.9"
 serde_json = "0.9"
 serde_derive = "0.9"
