--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ serde_json = "0.9"
 serde_derive = "0.9"
 toml = "0.3.2"
 urlparse = "0.7.3"
+
+[dev-dependencies]
+lazy_static = "1.4.0"
+pretty_assertions = "0.4.0"
