--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ exclude = [
 
 [lib]
 name = "libtwitch_rs"
-crate-type = ["dylib", "staticlib", "cdylib", "rlib"]
+crate-type = ["staticlib", "cdylib", "rlib"]
 path = "src/lib.rs"
 test = true
 doc = true
