--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,7 +3,7 @@ reorder_imports = true
 combine_control_expr = false
 format_code_in_doc_comments = true
 format_macro_matchers = true
-hard_tabs = true
+hard_tabs = false
 merge_imports = true
 normalize_comments = true
 wrap_comments = true
